2006-08-28  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (get_window_cursor_type) [!HAVE_WINDOW_SYSTEM]:
	Don't attempt to replace cursor on image glyphs.

2006-08-28  Kenichi Handa  <handa@m17n.org>

	* coding.c (Fdetect_coding_region, Fdetect_coding_string): Fix
	docstring about ISO-2022 control characters.

2006-08-28  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (get_window_cursor_type): Replace BOX cursor on images
	with a hollow box cursor if image is larger than 32x32 (or the default
	frame font if that is bigger).  Replace any other cursor on images
	with hollow box cursor, as redisplay doesn't support bar and hbar
	cursors on images.

2006-08-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* alloc.c (BLOCK_INPUT_ALLOC, UNBLOCK_INPUT_ALLOC): Undo previous
	change.  Move mutex lock/unlock operations inside BLOCK_INPUT.

	* dired.c (directory_files_internal_unwind, directory_files_internal)
	(file_name_completion): Add BLOCK_INPUT around opendir/closedir.

	* image.c [MAC_OS] (image_load_qt_1): Use ComponentResult instead
	of OSErr.

	* keyboard.c (in_sighandler): Remove variable.
	(Fcurrent_idle_time): Add missing `doc:'.
	(input_available_signal, init_keyboard): Undo previous change.

	* keyboard.h (in_sighandler): Remove extern.

	* mac.c (create_apple_event_from_event_ref, select)
	(Fmac_get_file_creator, Fmac_get_file_type, Fmac_set_file_creator)
	(Fmac_set_file_type, cfstring_create_normalized)
	(mac_get_system_locale, select_and_poll_event, sys_select): Use
	OSStatus instead of OSErr.

	* macfns.c [TARGET_API_MAC_CARBON] (mac_update_proxy_icon): Don't
	use FRAME_FILE_NAME.  Use (FS)UpdateAlias.
	(Fx_create_frame): Apply 2006-07-03 for xfns.c.

	* macselect.c (get_scrap_from_symbol, clear_scrap, put_scrap_string)
	(put_scrap_private_timestamp, scrap_has_target_type, get_scrap_string)
	(get_scrap_private_timestamp, get_scrap_target_type_list)
	(x_own_selection, x_get_foreign_selection)
	(Fx_disown_selection_internal, Fx_selection_owner_p)