@@ -2074,7 +2074,7 @@ whether or not it is currently displayed in some window.  */)
     {
       int it_start;
       int oselective;
-      int start_on_image_or_stretch_p;
+      int start_on_image_or_stretch_or_string_p;
 
       SET_TEXT_POS (pt, PT, PT_BYTE);
       start_display (&it, w, pt);
@@ -2086,8 +2086,9 @@ whether or not it is currently displayed in some window.  */)
 	 while the end position is really at some X > 0, the same X that
 	 PT had.  */
       it_start = IT_CHARPOS (it);
-      start_on_image_or_stretch_p = (it.method == GET_FROM_IMAGE
-				     || it.method == GET_FROM_STRETCH);
+      start_on_image_or_stretch_or_string_p = (it.method == GET_FROM_IMAGE
+					       || it.method == GET_FROM_STRETCH
+					       || it.method == GET_FROM_STRING);
       reseat_at_previous_visible_line_start (&it);
       it.current_x = it.hpos = 0;
       /* Temporarily disable selective display so we don't move too far */
@@ -2098,10 +2099,10 @@ whether or not it is currently displayed in some window.  */)
 
       /* Move back if we got too far.  This may happen if
 	 truncate-lines is on and PT is beyond right margin.
-	 It may also happen if it_start is on an image or a stretch
-	 glyph -- in that case, don't go back.  */
+	 It may also happen if it_start is on an image, stretch
+	 glyph, or string -- in that case, don't go back.  */
       if (IT_CHARPOS (it) > it_start && XINT (lines) > 0
-	  && !start_on_image_or_stretch_p)
+	  && !start_on_image_or_stretch_or_string_p)
 	move_it_by_lines (&it, -1, 0);
 
       it.vpos = 0;
